tests/baselines/reference/privateNameInInExpressionTransform.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNameInInExpressionTransform.ts(15,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
tests/cases/conformance/classes/members/privateNames/privateNameInInExpressionTransform.ts(15,21): error TS2361: The right-hand side of an 'in' expression must not be a primitive.
tests/cases/conformance/classes/members/privateNames/privateNameInInExpressionTransform.ts(17,14): error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
tests/cases/conformance/classes/members/privateNames/privateNameInInExpressionTransform.ts(24,21): error TS1005: ';' expected.
tests/cases/conformance/classes/members/privateNames/privateNameInInExpressionTransform.ts(25,18): error TS1005: ';' expected.
tests/cases/conformance/classes/members/privateNames/privateNameInInExpressionTransform.ts(37,12): error TS18016: Private identifiers are not allowed outside class bodies.


==== tests/cases/conformance/classes/members/privateNames/privateNameInInExpressionTransform.ts (6 errors) ====
    // TODO(aclaymore) add cases for static fields
    
    class Foo {
        #p1 = 1;
        check(v: any) {
            #p1 in v; // expect WeakMap '_p1'
        }
        precedence(v: any) {
            // '==' has lower precedence than 'in'
            // '<'  has same precedence than 'in'
            // '<<' has higher precedence than 'in'
    
            v == #p1 in v == v; // Good precedence: ((v == (#p1 in v)) == v)
    
            v << #p1 in v << v; // Good precedence: (v << (#p1 in (v << v)))
                 ~~~~~~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                        ~~~~~~
!!! error TS2361: The right-hand side of an 'in' expression must not be a primitive.
    
            v << #p1 in v == v; // Good precedence: ((v << (#p1 in v)) == v)
                 ~~~~~~~~
!!! error TS2363: The right-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
    
            v == #p1 in v < v; // Good precedence: (v == ((#p1 in v) < v))
    
            #p1 in v && #p1 in v; // Good precedence: ((#p1 in v) && (#p1 in v))
        }
        invalidLHS(v: any) {
            'prop' in v = 10;
                        ~
!!! error TS1005: ';' expected.
            #p1 in v = 10;
                     ~
!!! error TS1005: ';' expected.
        }
    }
    
    class Bar {
        #p1 = 1;
        check(v: any) {
            #p1 in v; // expect WeakMap '_p1_1'
        }
    }
    
    function syntaxError(v: Foo) {
        return #p1 in v; // expect `return in v` so runtime will have a syntax error
               ~~~
!!! error TS18016: Private identifiers are not allowed outside class bodies.
    }
    
    export { }
    